--- a/Valhacks2024/Lucas/knn.ipynb
+++ b/Valhacks2024/Lucas/knn.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,221 +125,48 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "wf1_resampled, sr1 = torchaudio.load(\"../Data/240519 0500 Subject 1.wav\")\n",
-    "wf1_resampled = np.array(wf1_resampled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_size = int(0.5 * sr1)  # 0.5 seconds\n",
-    "hop_size = int(0.25 * sr1)  # 0.25 seconds\n",
-    "frames = []\n",
-    "for i in range(0, len(wf1_resampled), hop_size):\n",
-    "    frame = wf1_resampled[i:i + frame_size]\n",
-    "    frames.append(frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    }
-   ],
-   "source": [
-    "def extract_mfcc(frame):\n",
-    "    mfccs = librosa.feature.mfcc(y=frame, sr=sr1, n_mfcc=13)\n",
-    "    return mfccs\n",
-    "\n",
-    "features = np.array([extract_mfcc(frame) for frame in frames])\n",
-    "features = features.reshape(features.shape[0], -1)  # Reshape to 2D array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = StandardScaler()\n",
-    "features_scaled = scaler.fit_transform(features)[0].reshape(-1, 1)[:300000] # out of 14372943"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1131.3708, -1131.3708, -1131.3708, ...,     0.    ,     0.    ,\n",
-       "            0.    ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "300000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(features_scaled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features_scaled.reshape(1, -1)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({0.0: 300000})"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import Counter\n",
-    "Counter(list(features_scaled.reshape(1, -1)[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({0.0: 13267332, -1131.3708: 1105611})"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Counter(list(features.reshape(1, -1)[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features_scaled = features_scaled.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/lib/python3.12/site-packages/sklearn/base.py:1473: ConvergenceWarning: Number of distinct clusters (1) found smaller than n_clusters (5). Possibly due to duplicate points in X.\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features_scaled, np.zeros(len(features_scaled)), test_size=0.1, random_state=42)\n",
-    "\n",
     "from sklearn.cluster import KMeans\n",
-    "\n",
-    "kmeans = KMeans(n_clusters=5, max_iter = 1000, init='k-means++', random_state=42)\n",
-    "kmeans.fit(features_scaled)\n",
-    "\n",
-    "y_pred = kmeans.labels_"
+    "from collections import Counter\n",
+    "# wf1_resampled, sr1 = torchaudio.load(\"../Data/240519 0500 Subject 1.wav\")\n",
+    "# wf1_resampled = np.array(wf1_resampled)\n",
+    "path = \"../Data/240519 0500 Subject 1.wav\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({0: 300000})\n"
+      "x\n",
+      "x\n",
+      "x\n",
+      "x\n",
+      "Counter({2: 5061, 3: 4225, 1: 2884, 4: 2741, 0: 1864, 5: 914})\n"
      ]
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "distribution = Counter(y_pred)\n",
-    "print(distribution)"
+    "y, sr = librosa.load(path)\n",
+    "\n",
+    "print(\"x\")\n",
+    "\n",
+    "# Split audio into 2 second clips\n",
+    "split_audio = np.array_split(y, int(len(y) / (2 * sr)))\n",
+    "print(\"x\")\n",
+    "\n",
+    "# Extract features \n",
+    "features = np.array([librosa.feature.mfcc(y=clip, sr=sr).flatten() for clip in split_audio])\n",
+    "print(\"x\")\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=6).fit(features)\n",
+    "print(\"x\")\n",
+    "\n",
+    "# Print the labels of each 2 second clip\n",
+    "print(Counter(kmeans.labels_))"
    ]
   },
   {
